infinite scroll and some changes