@@ -1,13 +1,14 @@
 package com.filmstar.apps.filmstar;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
+import com.filmstar.domain.movie.Movie;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
-import org.springframework.web.bind.annotation.CrossOrigin;
-import org.springframework.web.bind.annotation.GetMapping;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.web.bind.annotation.*;
 
 import com.filmstar.domain.movie.MovieRepository;
 
@@ -19,10 +20,25 @@ public class QueryMovieListGetController {
 	
 	@Autowired
 	private MovieRepository movieRepository;
-	
+
 	@GetMapping
-	public List<SerializedMovie> execute(){
-		return movieRepository.findAllAvailable().stream().map(SerializedMovie::from).toList();
+	public PaginatedMovieResponse execute(
+			@RequestParam(defaultValue = "0") int page,
+			@RequestParam(defaultValue = "10") int size
+	){
+		PageRequest pageRequest = PageRequest.of(page, size);
+		Page<Movie> moviePage = movieRepository.findAllAvailable(pageRequest);
+
+		List<SerializedMovie> serializedMovies = moviePage.getContent().stream()
+				.map(SerializedMovie::from)
+				.collect(Collectors.toList());
+
+		return new PaginatedMovieResponse(
+				serializedMovies,
+				moviePage.getNumber(),      // current page
+				moviePage.hasPrevious() ? moviePage.getNumber() - 1 : null,  // before
+				moviePage.hasNext() ? moviePage.getNumber() + 1 : null      // after
+		);
 	}
 
 }
